--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17,6 +17,22 @@
   top: 0;
   right: 0;
   z-index: 1999;
+  display: flex;
+  flex-flow: row nowrap;
+}
+
+#topnav > :nth-child(1) {
+  flex: 1;
+}
+
+#topnav > :nth-child(2) {
+  flex: 0 0 auto;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  align-self: center;
+  gap: 8px;
+  margin-right: var(--space-l-xu1x80);
 }
 
 #topnav header {
